# snapdragon_simple_autonomy

./: .gitignore  Makefile  README.md
adsp/: CMakeLists.txt  basic_uart.c  basic_uart.h
apps/: CMakeLists.txt  basic_uart.c
common/: dspal_log.h  platform.h  serial_interface.idl  status.h
ros/snapdragon_mavros_autonomy/: CMakeLists.txt  mavros_autonomy.cpp  okvis_pose.cpp  package.xml
ros/snapdragon_mavros_autonomy/include/: mavros_autonomy.h
ros/snapdragon_mavros_autonomy/launch/: snapdragon_mavros_autonomy.launch
ros/snapdragon_simple_autonomy/: CMakeLists.txt  README.md  package.xml  simple_autonomy.cpp
ros/snapdragon_simple_autonomy/include/simple_autonomy/: basic_uart.h  serial_interface.h
ros/snapdragon_simple_autonomy/launch/: snapdragon_simple_autonomy.launch
